For the latest news, visit the SparForte web site.

Objective: TBD

CHANGES SINCE 2.6

1. Fix: --without-sound now builds successfully.

2. Fix: --without-readline now builds successfully.


CHANGES SINCE 2.6.1

3. New: more error messages updated to new format.

4. Fix: additional error checks for JSON encode/decode.
