@@ -13,5 +13,9 @@ CHANGES SINCE 2.6.1
 
 3. New: more error messages updated to new format.
 
-4. Fix: additional error checks for JSON encode/decode.
+4. Fix: additional error checks for JSON encoding/decoding.
+
+5. Fix: whitespace handling for JSON encoding/decoding.
+
+6. Fix: boolean values now shown in env command.
 
